[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "harness"
version = "0.2.0-local"
description = "Local-only browser harness for AI agents via CDP. No cloud, no cookie exfiltration."
requires-python = ">=3.11"
dependencies = [
    "cdp-use==1.4.5",
    "websockets==16.0",
]

[project.scripts]
browser-harness = "run:main"

[tool.setuptools]
py-modules = ["run", "helpers", "daemon", "admin"]
